# LargeForgeAI

./: CHANGELOG.md  CLAUDE.md  DEVELOPMENT_PLAYBOOK.md  PROMPTS.md  README.md  pyproject.toml
docs/: DOCUMENTATION_ROADMAP.md  FAQ.md  GLOSSARY.md  INDEX.md  TUTORIAL.md
docs/api/: REST_API_REFERENCE.md  SDK_REFERENCE.md  openapi.yaml
docs/architecture/: ARCHITECTURE_DOCUMENT.md
docs/case-studies/: CASE_STUDY_CODE_ASSISTANT.md  CASE_STUDY_CUSTOMER_SUPPORT.md
docs/cheap_llm_training_blueprint/: ARCHITECTURE.md  COST_ESTIMATION.md  DATASETS.md  PROJECT_STRUCTURE.md  README.md  ROUTER_DESIGN.md  TRAINING_COMMANDS.md
docs/data/: DATA_DICTIONARY.md
docs/design/: DESIGN_DOCUMENT.md
docs/development/: CONTRIBUTING.md
docs/development/adr/: ADR-001-inference-backend-selection.md  ADR-002-training-framework-selection.md  ADR-003-expert-routing-architecture.md  ADR_TEMPLATE.md  README.md
docs/guides/: CONFIGURATION.md  GETTING_STARTED.md  INSTALLATION.md  QUICK_START.md
docs/learning/: LEARNING_PATH.md
docs/learning/tutorials/: TUTORIAL_01_FIRST_FINETUNE.md  TUTORIAL_02_DPO_TRAINING.md
docs/llm_complete_stack/: README.md
docs/llm_complete_stack/configs/: axolotl_lora.yml
docs/llm_complete_stack/data/: dpo_format.jsonl  synthetic_prompt_templates.txt
docs/llm_complete_stack/deployment/: DEPLOYMENT.md
docs/llm_complete_stack/inference/: run_vllm.md
docs/models/: MODEL_CARD_TEMPLATE.md
docs/operations/: OPERATIONS_MANUAL.md  RUNBOOK.md
docs/research/: BENCHMARKING_GUIDE.md  RESEARCH_OVERVIEW.md
docs/security/: SECURITY_ARCHITECTURE.md
docs/specifications/: BRS_Business_Requirements_Specification.md  OpsCon_System_Operational_Concept.md  SRS_Software_Requirements_Specification.md  StRS_Stakeholder_Requirements_Specification.md  SyRS_System_Requirements_Specification.md
docs/testing/: TEST_PLAN.md
docs/wiki/: CLI-Reference.md  Home.md  Installation.md  Why-LargeForgeAI.md
largeforge/: __init__.py  version.py
largeforge/auth/: __init__.py  dependencies.py  models.py  router.py  service.py
largeforge/cli/: __init__.py  data.py  deploy.py  export.py  main.py  serve.py  synthetic.py  train.py  verify.py  web.py
largeforge/config/: __init__.py  base.py  inference.py  training.py  web.py
largeforge/costs/: __init__.py  callback.py  models.py  tracker.py
largeforge/data/: __init__.py  converters.py  generators.py  loaders.py  synthetic.py  validators.py
largeforge/deployment/: __init__.py  bundle.py  compose.py  dockerfile.py  templates.py
largeforge/experiments/: __init__.py  callback.py  models.py  tracker.py
largeforge/inference/: __init__.py  base.py  generator.py  server.py  transformers_backend.py  vllm_backend.py
largeforge/registry/: __init__.py  models.py  service.py
largeforge/router/: __init__.py  base.py  hybrid.py  keyword.py  semantic.py
largeforge/training/: __init__.py  base.py  callbacks.py  dpo.py  events.py  lora.py  orchestrator.py  orchestrator_callbacks.py  progress.py  scheduler.py  sft.py
largeforge/utils/: __init__.py  device.py  io.py  logging.py
largeforge/verification/: __init__.py  benchmarks.py  report.py  smoke_test.py  validator.py
largeforge/web/: __init__.py  api.py  app.py  schemas.py  state.py  websocket.py
llm/: __init__.py
llm/data/: __init__.py  loaders.py  synthetic.py
llm/experts/: __init__.py  manager.py
llm/inference/: __init__.py  client.py  quantize.py  server.py
llm/router/: __init__.py  app.py  classifier.py
llm/training/: __init__.py  cli.py  config.py  distill.py  dpo.py  pretrain.py  sft.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  conftest.py  test_cli_integration.py  test_data_pipeline.py  test_end_to_end.py  test_inference_pipeline.py  test_router_integration.py  test_training_pipeline.py
tests/unit/: __init__.py  test_cli.py  test_config.py  test_data.py  test_inference.py  test_router.py  test_training.py  test_utils.py
(+29 files in other folders)
